Primeiro commit do site TechBlog

--- a/Comprar.html
+++ b/Comprar.html
@@ -10,7 +10,7 @@
 
     <nav>
         <ul class="Paginas">
-            <h1>TechBlog</h1>
+            <div class="logo">TechBlog</div>
             <li><a href="Problemascomuns.html">Soluções para problemas</a></li>
             <li><a href="Comprar.html">Comprar</a></li>
             <li><a href="Segurança.html">Segurança</a></li>
