--- a/Segurança.html
+++ b/Segurança.html
@@ -10,17 +10,17 @@
 
     <nav>
         <ul class="Paginas">
-            <h1>TechBlog</h1>
+            <div class="logo">TechBlog</div>
             <li><a href="Problemascomuns.html">Soluções para problemas</a></li>
             <li><a href="Comprar.html">Comprar</a></li>
             <li><a href="Segurança.html">Segurança</a></li>
             <li><a href="Tutoriais.html">Tutoriais</a></li>
             <li><a href="index.html">Notícias</a></li>
         </ul>
-        <div class="barra-pesquisa">
+        <form class="barra-pesquisa" action="#" method="get">
             <input type="text" placeholder="Pesquisar..." />
-            <button>Buscar</button>
-          </div>  
+            <button type="submit">Buscar</button>
+          </form> 
     </nav>
 
     <section>
